# sonar-gh-llama-stack-agent

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
config/: agent-config.yaml  mcp-config.json
docker/: Dockerfile  docker-compose.yml
docs/: LOCAL_USAGE_GUIDE.md
src/sonarqube_agent/: __init__.py  main.py
src/sonarqube_agent/agent/: __init__.py  agent_core.py  llama_stack_config.py
src/sonarqube_agent/analyzers/: __init__.py  false_positive.py  fix_generator.py  risk_assessment.py
src/sonarqube_agent/integrations/: __init__.py  github.py  sonarqube.py
src/sonarqube_agent/utils/: __init__.py  logging_config.py  pr_templates.py
